--- a/templates/home.html
+++ b/templates/home.html
@@ -493,7 +493,7 @@ p {
             
             <!-- Second Box: Wooden Utensils -->
             <div class="box">
-                <img src="{% static "/image/utensils.jpg" %}" alt="Wooden Utensils">
+                <img src="{% static "/image/utensil.jpg" %}" alt="Wooden Utensils">
                 <h2>Wooden Utensils</h2>
                 <p>Our wooden utensils are made from high-quality, sustainably sourced wood, designed to bring a natural touch to your kitchen. Durable and crafted with care.</p>
                 <a href="#">
@@ -502,7 +502,7 @@ p {
             
             <!-- Third Box: Mustard Oil -->
             <div class="box">
-                <img src="{% static "image/oil.png" %}" alt="Mustard Oil">
+                <img src="{% static "image/4.png" %}" alt="Mustard Oil">
                 <h2>Mustard oil</h2>
                 <p>Pure mustard oil, cold-pressed to retain its natural flavor and health benefits. A staple in many kitchens, our mustard oil is perfect for cooking and massages.</p>
                 <a href="#">
