--- a/templates/root.html
+++ b/templates/root.html
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     
-                    <a href="" class="nav-item nav-link">
+                    <a href="{% url "Favorites" %}" class="nav-item nav-link">
                         <img src={% static "image/favourite.png" %} alt="contact" class="cart">
                     </a> 
                     <li class="nav-item">
