--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 :root {
     --bg-color: white;
     --text-color: black;
-    --card-bg: #f8f9fa;
+    --card-bg: #e5e5e5;
     --navbar-bg: rgba(255, 255, 255, 0.9);
     --dropdown-bg: rgba(255, 255, 255, 0.9);
     --link-color: rgb(255, 106, 0);
@@ -39,13 +39,13 @@ body {
     border-bottom: 3px solid var(--text-color);
     
 }
-
+/* 
 @media (max-width: 578.98px)
 {
     .navbar{
         height:100px;
     }
-}
+} */
 
 .navbar-expand-lg .navbar-nav .nav-link {
     color: var(--text-color) !important;
