--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,6 +1,10 @@
 {% extends "root.html" %}
 
 {% block style %}
+
+tbody, td, tfoot, th, thead, tr {
+    border-color:var(--text-color);
+}
 .btn:hover{
     background-color:var(--link-color);
     border-color: var(--link-color) !important; 
@@ -20,6 +24,9 @@
     background-color:var(--text-color);
     border-color:var(--bg-color)!important;
     color:var(--link-color);
+}
+.container{
+    margin-bottom:50px;
 }
 {% endblock style %}
 
@@ -84,7 +91,7 @@
                     <h2 class="mt-4">Your Cart is Empty</h2>
                     <p class="text-muted" style="color:var(--text-color) !important;">Looks like you haven't added anything to your cart yet.</p>
                     <a href="/" class="btn btn-danger mt-3">
-                        <i class="fas fa-shopping-cart"></i> Continue Shopping
+                        <i class="fas fa-shopping-cart" ></i> Continue Shopping
                     </a>
                 </div>
             {% endif %}
